0.8.0/_sources/gallery/surface_normals_wireframe.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/surface_normals_wireframe.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_surface_normals_wireframe.py:


Surface normals wireframe
=========================

Display a 3D mesh with normals and wireframe

.. tags:: experimental

.. GENERATED FROM PYTHON SOURCE LINES 9-32



.. image-sg:: /gallery/images/sphx_glr_surface_normals_wireframe_001.png
   :alt: surface normals wireframe
   :srcset: /gallery/images/sphx_glr_surface_normals_wireframe_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Downloading data from https://raw.githubusercontent.com/vispy/demo-data/main/orig/triceratops.obj.gz (141 kB)
    [..................                      ] 45.52059 | downloading       [....................................    ] 91.04119 / downloading       [........................................] 100.00000 - downloading   
    File saved as /home/runner/.vispy/data/orig/triceratops.obj.gz.
    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:50: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),
    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:50: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),






|

.. code-block:: Python


    from vispy.io import load_data_file, read_mesh

    import napari

    vert, faces, _, _ = read_mesh(load_data_file('orig/triceratops.obj.gz'))
    # scale up the mesh (napari#3477)
    vert *= 100

    viewer = napari.Viewer(ndisplay=3)
    surface = viewer.add_surface(data=(vert, faces))

    # enable normals and wireframe
    surface.normals.face.visible = True
    surface.normals.vertex.visible = True
    surface.wireframe.visible = True

    viewer.camera.orientation = ('towards', 'up', 'right')
    viewer.camera.angles = (0, -30, 0)
    viewer.fit_to_view()

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_surface_normals_wireframe.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: surface_normals_wireframe.ipynb <surface_normals_wireframe.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: surface_normals_wireframe.py <surface_normals_wireframe.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: surface_normals_wireframe.zip <surface_normals_wireframe.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
